--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">Alice E Nelson</h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Some sort of great tag line or mission statement goes here.</h2>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Creating solutions for small business through great web design.</h2>
                     <!--<a class="btn btn-primary js-scroll-trigger" href="#about">About</a>-->
                 </div>
             </div>
@@ -51,7 +51,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">Building Better Solutions</h2>
                         <p class="text-white-50">
-                            I am making things. I'm going to put links below, but if you want to skip straight to my
+                            I have worked in the food service industry for the last 13 years, as a barista first, I worked my way up to managment for a small business owner. Together we added 2 more locations and tripled the workforce. I plan to bring this same work ethic, drive and tenacity to building web designs to help improve small buisness logistics. If you'd like to see my work, keep scrolling or 
                             <a href="https://github.com/anelson0112">GitHub page</a>
                             you can do it here.
                         </p>
@@ -65,7 +65,7 @@
             <div class="container">
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="green_me.jpg" alt="Girl in a green hoodie." /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="green_me_resize.jpg" alt="Girl in a green hoodie." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4 class="text-black">About Me</h4>
@@ -114,7 +114,7 @@
                 <div class="row">
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                        <h2 class="text-white mb-5">Send me you email address and I will contact you.</h2>
+                        <h2 class="text-white mb-5">Send me your email and we can chat about projects.</h2>
                         <form class="form-inline d-flex">
                             <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" type="email" placeholder="Enter email address..." />
                             <button class="btn btn-primary mx-auto" type="submit">Talk to me</button>
@@ -133,7 +133,7 @@
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Address</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">Waldo Neighborhood, KCMO 64114</div>
+                                <div class="small text-black-50">Waldo Neighborhood<br> KCMO 64114</div>
                             </div>
                         </div>
                     </div>
@@ -161,7 +161,7 @@
                 <div class="social d-flex justify-content-center">
                     <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                     <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+                    <a class="mx-2" href="https://github.com/anelson0112"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
