--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">Building Better Solutions</h2>
                         <p class="text-white-50">
-                            I have worked in the food service industry for the last 13 years, as a barista first, I worked my way up to managment for a small business owner. Together we added 2 more locations and tripled the workforce. I plan to bring this same work ethic, drive and tenacity to building web designs to help improve small buisness logistics. If you'd like to see my work, keep scrolling or 
+                            I have worked in the food service industry for the last 13 years, as a barista first, I worked my way up to managment for a small business owner. Together we added 2 more locations and tripled the workforce.<br> I plan to bring this same work ethic, drive and tenacity to building web designs to help improve small buisness logistics. If you'd like to see my work, keep scrolling or 
                             <a href="https://github.com/anelson0112">GitHub page</a>
                             you can do it here.
                         </p>
