--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
                         <h2 class="text-white mb-5">Send me your email and we can chat about projects.</h2>
-                        <form class="form-inline d-flex">
+                        <form class="form-inline d-flex" action= "mailto:anelson0112@skilledkc.org" method="post" enctype="text/plain">
                             <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" type="email" placeholder="Enter email address..." />
                             <button class="btn btn-primary mx-auto" type="submit">Talk to me</button>
                         </form>
@@ -143,7 +143,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50"><a href="#!">anelson0112@skilledkc.org</a></div>
+                                <div class="small text-black-50"><a href="mailto:anelson0112@skilledkc.org">anelson0112@skilledkc.org</a></div>
                             </div>
                         </div>
                     </div>
