--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="container">
             <!--Featured Project Row-->
                 <div class="row align-items-center bg-light no-gutters mb-4 mb-lg-5">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="green_me_resize.jpg" alt="Girl in a green hoodie." /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="green_me_px.jpg" alt="Girl in a green hoodie." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4 class="text-black">About Me</h4>
@@ -78,7 +78,7 @@
                 </div>
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><img class="img-fluid" src="serious.jpg" alt="A serious picture of me" /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="serious_px.jpg" alt="A serious picture of me" /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -94,7 +94,7 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><img class="img-fluid" src="Starla.jpg" alt="Find something" /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="Starla_px.jpg" alt="Find something" /></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
