--- a/index.html
+++ b/index.html
@@ -94,21 +94,51 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><img class="img-fluid" src="Starla_px.jpg" alt="Find something" /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="Starla_px.jpg" alt="Find something" />
+                    </div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">TBA</h4>
-                                    <p class="mb-0 text-white-50">Enjoy a picture of my precious dog until I get a project inserted.</p><br>
-                                    <a class="btn btn-primary js-scroll-trigger" href="#about">Starla</a>
+                                    <h4 class="text-white">Fizz Buzz</h4>
+                                    <p class="mb-0 text-white-50">Did the typical programmer Fizz Buzz code, I wrote the javascript in 2 ways, using a switch case, as well as if/else. The first button takes you to the page to see it in action using the switch case funtion, the next button takes you to the code where you can see it written both ways.</p><br>
+                                    <a class="btn btn-primary js-scroll-trigger" href="https://anelson0112.github.io/fizzbuzz/">Fizz Buzz Page</a>
+                                    <a class="btn btn-primary js-scroll-trigger" href="https://github.com/anelson0112/fizzbuzz">Fizz Buzz Code</a>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            
+            <!-- <div class="row justify-content-center no-gutters">
+                <div class="col-lg-6"><div class="bg-black text-center h-100 project">
+                    <div class="d-flex h-100">
+                        <div class="project-text w-100 my-auto text-center text-lg-right">
+                            <h4 class="text-white">Fizz Buzz</h4>
+                            <p class="mb-0 text-white-50">Did the typical programmer Fizz Buzz code, I wrote the javascript in 2 ways, using a switch case, as well as if/else. The first button takes you to the page to see it in action using the switch case funtion, the next button takes you to the code where you can see it written both ways.</p><br>
+                            <a class="btn btn-primary js-scroll-trigger" href="https://anelson0112.github.io/fizzbuzz/">Fizz Buzz Page</a>
+                            <a class="btn btn-primary js-scroll-trigger" href="https://github.com/anelson0112/fizzbuzz">Fizz Buzz Code</a>
+                            <hr class="d-none d-lg-block mb-0 mr-0" />
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 order-lg-first">
+                    <div class="bg-black text-center h-100 project">
+                        <div class="d-flex h-100">
+                            <div class="project-text w-100 my-auto text-center text-lg-right">
+                                <h4 class="text-white">Fizz Buzz</h4>
+                                <p class="mb-0 text-white-50">Did the typical programmer Fizz Buzz code, I wrote the javascript in 2 ways, using a switch case, as well as if/else. The first button takes you to the page to see it in action using the switch case funtion, the next button takes you to the code where you can see it written both ways.</p><br>
+                                <a class="btn btn-primary js-scroll-trigger" href="https://anelson0112.github.io/fizzbuzz/">Fizz Buzz Page</a>
+                                <a class="btn btn-primary js-scroll-trigger" href="https://github.com/anelson0112/fizzbuzz">Fizz Buzz Code</a>
+                                <hr class="d-none d-lg-block mb-0 mr-0" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+        <!-- </div>  -->
+        </div><!--container close-->
         </section>
         <!-- Signup-->
         <section class="signup-section" id="signup">
@@ -170,13 +200,12 @@
                 </div>
                 <div class="social d-flex justify-content-center">
                     <a class="mx-2" href="https://www.linkedin.com/in/aliceenelson"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
                     <a class="mx-2" href="https://github.com/anelson0112"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Alice E Nelson Industries LLC 2020</div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container">Made using a Bootstrap template, renmade by myself.</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
