--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </p>
                     </div>
                 </div>
-                <img class="img-fluid" src="al_fr_bw_sized.jpg" alt="Picture of Alice" />
+                <img class="img-fluid" src="trees.jpg" alt="Picture of Alice" />
             </div>
         </section>
         <!-- Projects-->
