--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
                         <h2 class="mb-5">Let's chat about projects.</h2>   
-                     <form action="mailto:anelson0112@skilledkc.org" method="post" enctype="text/plain">
+                     <form action="mailto:anelson121@gmail.com" method="post" enctype="text/plain">
                     <div class="form-group">
                         <input class="form-control" type="text" id="inputName" placeholder="Name">
                     </div>
@@ -230,7 +230,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50"><a href="mailto:anelson0112@skilledkc.org">anelson0112@skilledkc.org</a></div>
+                                <div class="small text-black-50"><a href="mailto:anelson121@gmail.com">anelson121@gmail.com</a></div>
                             </div>
                         </div>
                     </div>
