--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">Alice E Nelson</h1>
-                    <h2 class="text-white mx-auto mt-2 mb-5">Creating solutions through great web design.</h2>
+                    <h2 class="text-white mx-auto mt-2 mb-5">Beginning Web Developer</h2>
                     <!--<a class="btn btn-primary js-scroll-trigger" href="#about">About</a>-->
                 </div>
             </div>
