heroku hosted task list

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             <div class="project-text w-100 my-auto text-center text-lg-right">
                                 <h4 class="text-white">Task List</h4>
                                 <p class="mb-0 text-white-50">This is my first full stack project. Everything is written from scratch from the front end, to the server.</p><br>
-                                <a class="btn btn-primary js-scroll-trigger" href="https://anelson0112.github.io/TaskList/">Task List</a>
+                                <a class="btn btn-primary js-scroll-trigger" href="https://al-codes-task-list.herokuapp.com/index.html">Task List</a>
                                 <hr class="d-none d-lg-block mb-0 mr-0" />
                                     <br>
                                 <a class="btn btn-primary js-scroll-trigger" href="https://github.com/anelson0112/TaskList">Task List Code</a>
