--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h2 class="text-white mb-4">Building Better Solutions</h2>
+                        <h2 class="text-white mb-4">A little about me...</h2>
                         <p class="text-white-50">
-                            I have worked in the food service industry for the last 13 years, as a barista first, I worked my way up to managment for a small business owner. Together we added 2 more locations and tripled the workforce.<br> I plan to bring this same work ethic, drive and tenacity to build web applications to help improve small buisness logistics. If you'd like to see my work, keep scrolling or 
-                            <a href="https://github.com/anelson0112">GitHub page</a>
-                            you can do it here.
+                            I have worked in the food service industry for the last 13 years, as a barista first, I worked my way up to management for a small business owner. Together we added 2 more locations and tripled the workforce.<br> I plan to bring this same work ethic, drive and tenacity to build web applications. If you'd like to see my work, keep scrolling or 
+                            <a href="https://github.com/anelson0112">go to my GitHub.</a>
+                            
                         </p>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
                                     <h4 class="text-white">Serious Me</h4>
-                                    <p class="mb-0 text-white-50">This build on the first portfolio page, I wanted to work more on the CSS side to play with different elements of color and balance</p><br>
+                                    <p class="mb-0 text-white-50">This build on the first portfolio page, I wanted to work more on the CSS side to play with different elements of color and balance.</p><br>
                                     <a class="btn btn-primary js-scroll-trigger" href="https://anelson0112.github.io/serious_me/">Serious Me</a>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
@@ -103,7 +103,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">Fizz Buzz</h4>
-                                    <p class="mb-0 text-white-50">Did the typical programmer Fizz Buzz code, I wrote the javascript in 2 ways, using a switch case, as well as if/else. The first button takes you to the page to see it in action using the switch case funtion, the next button takes you to the code where you can see it written both ways.</p><br>
+                                    <p class="mb-0 text-white-50">Here is  the typical programmer Fizz Buzz code, I wrote the javascript in 2 ways, using a switch case, as well as if/else. The first button takes you to the page to see it in action using a switch case function, the next button takes you to the code where you can see it written both ways.</p><br>
                                     <a class="btn btn-primary js-scroll-trigger" href="https://anelson0112.github.io/fizzbuzz/">Fizz Buzz Page</a>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                     <br>
@@ -121,7 +121,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">ATM</h4>
-                                    <p class="mb-0 text-white-50">Here are two versions of an ATM. The basic ATM is one I wrote on my own, it has basic funcitonality on a local host.</p><br>
+                                    <p class="mb-0 text-white-50">Here are two versions of an ATM. The basic ATM is one I wrote on my own, it has basic functionality on a local host.</p><br>
                                     <a class="btn btn-primary js-scroll-trigger" href="https://anelson0112.github.io/atm/">ATM</a>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                     <br>
@@ -137,7 +137,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">ATM Refractor</h4>
-                                    <p class="mb-0 text-white-50">My instuctor started me with a basic skelton, I worked in the rest of the javascript functions for the working operations</p><br>
+                                    <p class="mb-0 text-white-50">My instructor started  with a basic skelton, I worked in the rest of the javascript functions for the working operations.</p><br>
                                     <a class="btn btn-primary js-scroll-trigger" href="https://anelson0112.github.io/atm-refactor/">ATM Refractor</a>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                     <br>
